2011-03-21  Marek Polacek  <mpolacek@redhat.com>

	* ebldynamictagname.c: Fix typo in TLSDESC_GOT.

2011-03-10  Mark Wielaard  <mjw@redhat.com>

	* Makefile.am (gen_SOURCES): Add eblstother.c.
	* eblstother.c: New file.
	* ebl-hooks.h: Add check_st_other_bits hook.
	* eblopenbackend.c (default_check_st_other_bits): New function.
	(fill_defaults): Hook default_check_st_other_bits.
	* libebl.h (ebl_check_st_other_bits): New prototype.

2010-07-07  Roland McGrath  <roland@redhat.com>

	* eblopenbackend.c (default_debugscn_p): Match .gdb_index section.

2010-02-15  Roland McGrath  <roland@redhat.com>

	* Makefile.am: Use config/eu.am for common stuff.

2010-01-04  Roland McGrath  <roland@redhat.com>

	* eblcorenote.c (ebl_core_note): Take GElf_Nhdr * and name data
	pointer instead of only n_type and n_descsz.
	* libebl.h: Update declaration.
	* ebl-hooks.h: Update core_note hook signature.
	* eblopenbackend.c (default_core_note): Likewise.

2009-10-14  Roland McGrath  <roland@redhat.com>

	* eblobjnote.c (ebl_object_note): Clean up NT_GNU_GOLD_VERSION printing.

2009-10-05  Roland McGrath  <roland@redhat.com>

	* eblopenbackend.c (default_debugscn_p): Match .debug_pubtypes and
	.debug_types too.

2009-09-02  Petr Machata  <pmachata@redhat.com>

	* libebl/eblstrtab.c (morememory): Allocate memory in multiples of
	pagesize.

2009-08-06  Petr Machata  <pmachata@redhat.com>

	* libebl/eblstrtab.c (ebl_strtabfinalize): Only call copystrings
	if we have any strings to copy.

2009-07-26  Mark Wielaard  <mjw@redhat.com>

	* eblobjnote.c (ebl_object_note): Handle NT_GNU_GOLD_VERSION.

	* eblobjnotetypename.c (ebl_object_note_type_name): Recognize
	NT_GNU_GOLD_VERSION.

2009-07-08  Roland McGrath  <roland@redhat.com>

	* ebl-hooks.h: Add abi_cfi hook.
	* eblopenbackend.c (default_abi_cfi): New function.
	(fill_defaults): Add initializer.
	* eblabicfi.c: New file.
	* Makefile.am (gen_SOURCES): Add it.
	* libebl.h: Declare ebl_abi_cfi.
