@@ -1,3 +1,8 @@
+2011-04-26  Mark Wielaard  <mjw@redhat.com>
+
+	* readelf.c (handle_notes_data): Call ebl_object_note_type_name
+	with note name.
+
 2011-03-24  Petr Machata  <pmachata@redhat.com>
 
 	* readelf.c (print_debug_line_section): Emit initial space for all
